[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "track-image-processing"
description = ""
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = { file = "LICENSE" }
authors = [{ name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "jax",
    "jaxlib",
    "pandas",
    "networkx",
    "xarray",
    "scikit-learn",
    "patsy",
    "tqdm",
    "track_linearization",
    "matplotlib",
    "seaborn",
    "scikit-video",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["black", "pytest", "pytest-cov"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/track-image-processing/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/track-image-processing"]
